--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     </div>
                     <div class="caja7-animation">
                         <video class="dogma-video" muted playsinline preload="auto">
-                            <source src="./img/dogma.mp4" type="video/mp4">
+                            <source src="./img/Dogma.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                     </div>
                     <div class="caja8-animation">
                         <video class="error-video" muted playsinline preload="auto">
-                            <source src="./img/error.mp4" type="video/mp4">
+                            <source src="./img/Error.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
